--- a/lib/chat_web/controllers/page_html/home.html.heex
+++ b/lib/chat_web/controllers/page_html/home.html.heex
@@ -1,13 +1,23 @@
+<h2 class="text-xl my-10 text-center">Chat System</h2>
+
+<div id="messages"
+  class="border-solid border-2 border-sky-500 m-10 rounded-lg bg-primary-100 px-6 py-5 text-base text-primary-600"
+  role="alert">
+</div>
+<div class="flex justify-center">
 <div class="user">
-<div class ="user-name">Chris</div>
+<div class="user-name">Chris</div>
+</div>
+<input id="chat-input" class="w-1/4 outline-none mx-10 p-2.5 text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-500" placeholder="Write your thoughts here...">
+
+<div class="user">
+<div class="user-name"></div>
 </div>
 
 <div class="user">
-<div class ="user-name">chen</div>
+<div class="user-name"></div>
 </div>
 
-<div class="user">
-<div class ="user-name">david</div>
 </div>
 
-<p>Peace of mind from prototype to production</p>
+
