--- a/lib/chat_web/controllers/page_html/home.html.heex
+++ b/lib/chat_web/controllers/page_html/home.html.heex
@@ -9,7 +9,9 @@
 <div class="user-name">Chris</div>
 </div>
 <input id="chat-input" class="w-1/4 outline-none mx-10 p-2.5 text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-500" placeholder="Write your thoughts here...">
-
+<button id="sendButton" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full">
+  Send
+</button>
 <div class="user">
 <div class="user-name"></div>
 </div>
