--- a/lib/chat_web/live/pet_live/index.html.heex
+++ b/lib/chat_web/live/pet_live/index.html.heex
@@ -35,10 +35,10 @@ meta={@meta} path={~p"/pets"}>
     <div class="sr-only">
       <.link navigate={~p"/pets/#{pet}"}>Show</.link>
     </div>
-    <.link patch={~p"/pets/#{pet}/edit"}>Edit</.link>
+    <.link class="font-medium text-blue-600 dark:text-blue-500" patch={~p"/pets/#{pet}/edit"}>Edit</.link>
   </:action>
   <:action :let={{id, pet}}>
-    <.link
+    <.link class="font-medium text-blue-600 dark:text-blue-500"
       phx-click={JS.push("delete", value: %{id: pet.id}) |> hide("##{id}")}
       data-confirm="Are you sure?"
     >
