keep the filter and page for edit page

--- a/lib/chat_web/live/pet_live/index.html.heex
+++ b/lib/chat_web/live/pet_live/index.html.heex
@@ -57,6 +57,6 @@ meta={@meta} path={~p"/pets"}>
     title={@page_title}
     action={@live_action}
     pet={@pet}
-    patch={~p"/pets"}
+    patch={~p"/pets?#{@params}"}
   />
 </.modal>
