add current user

--- a/lib/chat_web/live/pet_live/index.html.heex
+++ b/lib/chat_web/live/pet_live/index.html.heex
@@ -60,3 +60,7 @@ meta={@meta} path={~p"/pets"}>
     patch={~p"/pets?#{@params}"}
   />
 </.modal>
+
+ <%= if @current_user.email=="zhaozengjian@gmail.com" do %>
+      <%= @current_user.email %>
+ <%= end  %> 
