--- a/lib/chat_web/live/pet_live/index.html.heex
+++ b/lib/chat_web/live/pet_live/index.html.heex
@@ -63,4 +63,4 @@ meta={@meta} path={~p"/pets"}>
 
  <%= if @current_user.email=="zhaozengjian@gmail.com" do %>
       <%= @current_user.email %>
- <%= end  %> 
+ <% end  %> 
